fix(navbar): Show theme toggle on mobile

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -62,6 +62,8 @@ html[data-theme='dark'] {
       }
 
       [class*='toggle_'] {
+        display: flex;
+
         transition: opacity 0.2s ease-out;
 
         &:hover,
